<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForms"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextForms"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextForms"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForms"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/age" />
        
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonForms"
            android:id="@+id/btn_tmb_send"
            android:backgroundTint="@color/colorLightGray"
            android:textColor="@color/black"
            android:text="@string/calc" />
    </LinearLayout>
</ScrollView>